--- a/frontend/src/app/borrowers/Borrowers.css
+++ b/frontend/src/app/borrowers/Borrowers.css
@@ -6,3 +6,11 @@ body, html {
     align-items: center; 
     justify-content: center; 
 }
+
+.Items {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
