--- a/frontend/src/app/borrowers/BorrowerTable.css
+++ b/frontend/src/app/borrowers/BorrowerTable.css
@@ -1,34 +1,66 @@
 .tableContainer {
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: left;
     align-items: flex-start;
     z-index: 1;
     overflow-y: auto;
-    padding-left: 90px;
-    margin: 2vw;
 }
   
-@media (max-width: 991px) {
+@media (max-width: 819px) {
     .tableContainer {
-        padding-left: 70px;
+        overflow: hidden;
+        width: 100%;
+        max-width: 100vw;
+        min-width: 700px;
     }
 }
 
-@media (max-width: 640px) {
-    .tableContainer {
-        padding-left: 60px;
-    }
-}
 
 .tableContent {
-
+    width: 100%;
+    margin-top: 2vh;
 }
 
-#BorrowerTable {
-    /* position: fixed; */
+#borrowerInfo {
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+#borrowerInfo tbody {
+    border: 1px solid #9B525F; 
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+#borrowerInfo tbody tr {
+    border-bottom: 0.99px solid #D9D9D9;
+    
+}
+
+#borrowerInfo td, #borrowerInfo th {
+    text-align: left;
+    padding: 8px 12px;
+    border: none; 
+    font-weight: 400;
+}
+
+#borrowerInfo td {
+    font-size: 1rem;
+}
+
+#borrowerInfo th {
+    font-size: 0.75rem;
+}
+
+#borrowerInfo thead tr {
+    border-bottom: none;
+}
+
+#borrowerInfo tbody tr:hover {
+    background-color: #F3E4E4;
 }
