--- a/frontend/src/app/borrowers/Borrowers.css
+++ b/frontend/src/app/borrowers/Borrowers.css
@@ -8,9 +8,11 @@ body, html {
 }
 
 .Items {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    padding: 0 1vw;
+    padding-top: 3vh;
 }
