--- a/frontend/src/app/inventory/inventory.css
+++ b/frontend/src/app/inventory/inventory.css
@@ -96,11 +96,11 @@ box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
     color: #333;
 }
 
-#NameTag, #SelectAll {
+#SortTag, #SelectAll {
     cursor: pointer;
 }
 
-#NameTag:hover {
+#SortTag:hover {
     transition: all 0.5s ease;
     color: #1c1c1c;
     font-weight: 500;
