--- a/frontend/src/app/components/ReturnButton.css
+++ b/frontend/src/app/components/ReturnButton.css
@@ -20,6 +20,10 @@
     justify-content: space-between;
 }
 
+.buttons {
+    float: right;
+}
+
 /* container for all return items */
 .itemContainer {
     display: flex;
