--- a/frontend/src/app/components/EditPage.css
+++ b/frontend/src/app/components/EditPage.css
@@ -230,6 +230,7 @@
     display: flex;
     justify-content: space-between;
     border-radius: 0;
+    color:#9B525F;
 }
 
 .p-dropdown-item:hover {
@@ -279,6 +280,7 @@
     padding: 0.5rem;
     border-top: 1px solid #DBDBDB;
     border-radius: 0rem;
+    color: #9B525F;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -295,6 +297,7 @@
     height: 0;
     margin: 0;
     padding: 0;
+    display: none;
 }
 
 .p-checkbox-icon .p-highlight {
