--- a/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
+++ b/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
@@ -1,3 +1,13 @@
+/**************************************************************
+ *
+ *                     InventoryUnit.css
+ *
+ *        Authors: Elias Swartz & Elisa Yu 
+ *           Date: 01/30/2025
+ *
+ *     Summary: CSS styling for the inventory units. 
+ * 
+ **************************************************************/
 @import url("../../globals.css");
 
 .unit {
