--- a/frontend/src/app/inventory/inventory.css
+++ b/frontend/src/app/inventory/inventory.css
@@ -94,16 +94,28 @@ box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 .TagsLabel {
     padding-left: 8vw;
     color: #333;
+    font-size: 1rem;
 }
 
 #SortTag, #SelectAll {
     cursor: pointer;
+    background: none; 
+    border: none;
+    color: #000000;
+    box-shadow: none;
+    font: 3rem;
 }
 
 #SortTag:hover {
     transition: all 0.5s ease;
     color: #1c1c1c;
     font-weight: 500;
+}
+
+#SortTag:focus {
+    transition: all 0.5s ease;
+    color: #9B525F;
+    font-weight: 1000;
 }
 
 #SelectAll {
