--- a/frontend/src/app/app.css
+++ b/frontend/src/app/app.css
@@ -46,15 +46,12 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  /* background-image: url("../../public/SM_LOGO.svg");  // re-add this to get SM logo
-  background-repeat: no-repeat;
-  background-position: center; */
-  background-color: black;
+  position: relative;
 }
 
 .sm-logo-large {
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 90%;
 }
 
 .sm-logo-small {
