--- a/frontend/src/app/inventory/15Tablecomp/Inventory.css
+++ b/frontend/src/app/inventory/15Tablecomp/Inventory.css
@@ -9,12 +9,13 @@ body, html {
 .Table {
     background: #F8F5F5;
     height: 100vh;
-    width: 95vw;
+    width: calc(100vw - 90px);
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     position: relative;
-    flex-shrink: 0;
+    transition: width 0.3s ease-in-out;
 }
 
 .Header {
@@ -28,7 +29,7 @@ body, html {
     position: relative;
     border-radius: 10px;
     padding-top: 2%;
-}   
+}
 
 .Items {
     display: flex;
@@ -141,15 +142,15 @@ body, html {
 
 .ItemBarHolder {
     background-color: white;
-    width: 95%;
+    width: 100%;
     display: flex;
     height: 80%;
     flex-direction: column;
-    max-height: 100%; 
     overflow-y: auto;
     border-radius: 10px;
     border: 1px solid #9B525F;
 }
+
 
 .pagination-controls {
     display: flex;
