--- a/frontend/src/app/components/BorrowPopup.css
+++ b/frontend/src/app/components/BorrowPopup.css
@@ -76,6 +76,20 @@
     width: 100%;
     box-sizing: border-box;
     margin-bottom: 0.5rem;
+    position: relative;
+  }
+
+  .borrow-image {
+    border-radius: 4px;
+    border: 1px solid #9b525f;
+    position: relative;
+    width: 25%;
+  }
+
+  .borrow-image::after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
   }
   
   .item-image {
