--- a/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
+++ b/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
@@ -66,6 +66,7 @@
     align-items: center;
     justify-content: center;
     background: lightgray 50% / cover no-repeat;
+    position: relative;
 }
 
 .picture img {
