--- a/frontend/src/app/inventory/15Tablecomp/Popup.css
+++ b/frontend/src/app/inventory/15Tablecomp/Popup.css
@@ -132,6 +132,10 @@
   margin-top: 1.25rem;
   border: 1px solid #9B525F;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .imageSelection {
