--- a/frontend/src/app/components/AddPage.css
+++ b/frontend/src/app/components/AddPage.css
@@ -90,7 +90,7 @@
     border: 1px solid var(--sm_red);
     border-radius: 1px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -114,6 +114,10 @@
     margin-top: 10px;
     max-width: 100%;
     max-height: 150px;
+}
+
+.image {
+    margin: 1vw;
 }
 
 .garment-and-time {
