--- a/frontend/src/app/borrowers/BorrowerTable.css
+++ b/frontend/src/app/borrowers/BorrowerTable.css
@@ -3,14 +3,15 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
-    justify-content: left;
-    align-items: flex-start;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
     z-index: 1;
     overflow-y: auto;
 }
-  
+
 @media (max-width: 819px) {
     .tableContainer {
         overflow: hidden;
@@ -18,7 +19,6 @@
         white-space: nowrap;
     }
 }
-
 
 .tableContent {
     width: 100%;
@@ -38,7 +38,6 @@
 
 #borrowerInfo tbody tr {
     border-bottom: 0.99px solid #D9D9D9;
-    
 }
 
 #borrowerInfo td, #borrowerInfo th {
@@ -62,4 +61,28 @@
 
 #borrowerInfo tbody tr:hover {
     background-color: #F3E4E4;
+}
+
+.pagination-controls {
+    margin-top: 1rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.num-items {
+    position: absolute;
+    left: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.page-selection {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
 }
