--- a/frontend/src/app/inventory/15Tablecomp/Inventory.css
+++ b/frontend/src/app/inventory/15Tablecomp/Inventory.css
@@ -13,9 +13,10 @@ body, html {
     max-width: 100vw;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
     position: relative;
     transition: width 0.3s ease-in-out;
+    flex-shrink: 0;
 }
 
 .Header {
@@ -23,6 +24,10 @@ body, html {
     height: 15%;
     width: 95%;
     display: flex;
+    border: 1px solid #9B525F;
+    background: linear-gradient(0deg, #FFF, 0%, #FFF, 100%), #F8F5F5;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+    padding-left: 1rem;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
@@ -66,6 +71,7 @@ body, html {
     width: 100%;
     padding-right: 10%;
     position: absolute;
+    width:100%;
     bottom: 0; 
     gap: 2vh;
     font-size: 1vw;
