--- a/frontend/src/app/inventory/15Tablecomp/Popup.css
+++ b/frontend/src/app/inventory/15Tablecomp/Popup.css
@@ -145,10 +145,12 @@
 }
 
 .imageSelection {
+  display: flex;
   height: 5vh;
   width: 100%;
   margin-top: 15px;
   justify-content: center;
+  flex-direction: row;
 }
 
 .infoHeader {
