--- a/frontend/src/app/components/BorrowPopup.css
+++ b/frontend/src/app/components/BorrowPopup.css
@@ -13,16 +13,16 @@
   justify-content: space-between;
   left:0;
   top:0;
-  height: 100vh;
+  height: 99vh;
   width: 100%;
   background: #F8F5F5;
   flex-direction: row;
   align-items: stretch;
 
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   
 }
-
+/* 
 .container {
     position: absolute;
     display: flex;
@@ -38,9 +38,17 @@
 
     box-sizing: border-box;
   }
+   */
+
+   .container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+  }
   
 .borrowItemsHeader {
-  flex: 2; /* more space */
+  flex: 1.15; /* more space */
   display: flex;
   flex-direction: column;
   padding: 2rem;
@@ -60,14 +68,14 @@
 }
   
 .info-header {
-  font-size: 2rem;
+  font-size: 2.65rem;
   font-weight: bold;
   color: #000;
   margin-bottom: 0.5rem;
   align-self: flex-start;
 }
 
-.borrowItemsHeader {
+/* .borrowItemsHeader {
     flex: 0 0 45%;
     display: flex;
     flex-direction: column;
@@ -83,10 +91,11 @@
     padding: 2rem;
     overflow-y: auto;
     box-sizing: border-box;
-  }
+  } */
   
   .borrow-header {
-    margin-bottom: 1rem;
+    margin-bottom: 1.75rem;
+    font-size: 1.35rem;
   }
   
   .borrowItemsContent {
@@ -103,24 +112,23 @@
   }
   
   .borrowed-item-box {
-    background-color: #ffe5e5;
-    border: 1px solid #9b525f;
-    border-radius: 4px;
+    background-color: #E3CECE;
     padding: 0.75rem 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    height: 15vh;
     box-sizing: border-box;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.80rem;
     position: relative;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
   }
 
   .borrow-image {
-    border-radius: 4px;
-    border: 1px solid #9b525f;
+    border: 2.5px solid #9b525f;
     position: relative;
-    width: 25%;
+    width: 20%;
   }
 
   .borrow-image::after {
@@ -139,10 +147,10 @@
   
   .item-name {
     flex: 1;
-    margin: 0 1rem;
-    font-size: 1rem;
+    margin: 0 3rem;
+    font-size: 1.75rem;
     color: #000;
-    font-weight: 1000;
+    font-weight: 700;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -150,7 +158,7 @@
   
   .item-id {
     flex: 0 0 auto;
-    font-size: 1rem;
+    font-size: 2rem;
     color: #000;
     font-weight: 1000;
     margin-right: 1rem;
@@ -159,7 +167,7 @@
   .delete-button {
     background: transparent;
     border: none;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     cursor: pointer;
     color: #000;
     line-height: 1;
@@ -216,11 +224,13 @@
     display: flex;
     gap: 1rem;
     align-items: center;
+    
   }
   
   
   .form-row.full-width {
     flex-direction: column;
+    
   }
   
   
@@ -228,6 +238,8 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+
+    
   }
   
   
@@ -237,11 +249,12 @@
   
   .form-group label {
     margin-bottom: 0.25rem;
-    font-weight: 600;
+    font-size: 1.20rem;
+    font-weight: 700;
     color: #000;
   }
   
-  .form-group input,
+
   .form-group select {
     background-color: #fff;
     color: #000;
@@ -252,16 +265,11 @@
     font-family: Arial, sans-serif;
     box-sizing: border-box;
     width: 100%;
+
+
   }
 
-  .form-group select.form-group-dropdown {
-    border: 0.5px solid transparent !important;
-  }
-  
-  
-
-  
-  .form-group textarea {
+  .form-group input {
     background-color: #fff;
     color: #000;
     padding: 0.75rem;
@@ -271,6 +279,29 @@
     font-family: Arial, sans-serif;
     box-sizing: border-box;
     width: 100%;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+
+
+  }
+
+  .form-group select.form-group-dropdown {
+    border: 0.5px solid transparent !important;
+
+  }
+  
+  
+  .form-group textarea {
+    background-color: #fff;
+    color: #000;
+    padding: 0.75rem;
+    border: 1px solid #9b525f;
+    font-size: 1rem;
+    font-family: Arial, sans-serif;
+    box-sizing: border-box;
+    width: 100%;
+
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
   }
   
 .info-form input.non-editable {
@@ -289,18 +320,20 @@
     background-color: #fff;
     border: 1px solid #9b525f;
     border-radius: 4px;
-    padding: 0.3rem;
+    padding: 0.12rem;
     display: inline-flex;
     align-items: center;
     width: 100%;
     box-sizing: border-box;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+
   }
   
   
   .selected-return {
     background-color: #9b525f;
     color: white;
-    padding: 0.5rem 0.75rem;
+    padding: 0.4rem 0.65rem;
     border-radius: 4px;
     font-size: 1rem;
     display: inline-flex;
@@ -315,6 +348,8 @@
     font-size: 1rem;
     margin-left: 0.5rem;
     cursor: pointer;
+
+    
   }
   
   
