finished icon and error text

--- a/frontend/src/app/app.css
+++ b/frontend/src/app/app.css
@@ -150,6 +150,10 @@
   transform: translate(-50%, -50%);
 }
 
+.eyecon:hover {
+  cursor: pointer;
+}
+
 .inputBox::placeholder {
   color: #592A33;
   opacity: 1;
